@@ -509,6 +509,8 @@ Tests
 Documentation
 -------------
 
+- Issue #13402: Document absoluteness of sys.executable.
+
 - Issue #13883: PYTHONCASEOK also works on OS X, OS/2, and RiscOS.
 
 - Issue #2134: The tokenize documentation has been clarified to explain why
